kopl/KoplParser.py
# Generated from Kopl.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class KoplParser ( Parser ):

    grammarFileName = "Kopl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'What()'", "'Count()'", "'FindAll()'", 
                     "'And()'", "'Or()'", "'FilterStr('", "')'", "'FilterNum('", 
                     "'FilterYear('", "'FilterDate('", "'QueryRelation()'", 
                     "'Select('", "'QueryAttrUnderCondition('", "'QueryAttr('", 
                     "'VerifyStr('", "'VerifyNum('", "'VerifyYear('", "'VerifyDate('", 
                     "'QueryAttrQualifier('", "'QueryRelationQualifier('", 
                     "'Relate('", "'QFilterStr('", "'QFilterNum('", "'QFilterYear('", 
                     "'QFilterDate('", "'FilterConcept('", "'Find('", "'='", 
                     "'<'", "'>'", "'!='", "'largest'", "'smallest'", "'forward'", 
                     "'backward'", "'('", "'-'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<b>'", "'<c>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "STRING_LITERAL", 
                      "INTEGER", "DECIMAL", "DOUBLE", "EXPONENT", "DIGIT", 
                      "FUNC_SEP", "IN_FUNC_SEP" ]

    RULE_root = 0
    RULE_whatEntityQuery = 1
    RULE_howManyEntityQuery = 2
    RULE_whatAttributeQuery = 3
    RULE_whatRelationQuery = 4
    RULE_attributeSatisfyQuery = 5
    RULE_whatAttributeQualifierQuery = 6
    RULE_whatRelationQualifierQuery = 7
    RULE_entitySetGroup = 8
    RULE_entitySet = 9
    RULE_entityFilterByRelation = 10
    RULE_entityFilterByAttribute = 11
    RULE_entityFilterByConcept = 12
    RULE_queryName = 13
    RULE_count = 14
    RULE_findAll = 15
    RULE_setOP = 16
    RULE_intersect = 17
    RULE_union = 18
    RULE_filterAttr = 19
    RULE_filterStr = 20
    RULE_filterNum = 21
    RULE_filterYear = 22
    RULE_filterDate = 23
    RULE_queryRelation = 24
    RULE_select = 25
    RULE_queryAttributeUnderCondition = 26
    RULE_queryAttribute = 27
    RULE_verify = 28
    RULE_verifyStr = 29
    RULE_verifyNum = 30
    RULE_verifyYear = 31
    RULE_verifyDate = 32
    RULE_queryAttrQualifier = 33
    RULE_queryRelationQualifier = 34
    RULE_relate = 35
    RULE_filterQualifier = 36
    RULE_filterStrQualifier = 37
    RULE_filterNumQualifier = 38
    RULE_filterYearQualifier = 39
    RULE_filterDateQualifier = 40
    RULE_filterConcept = 41
    RULE_entity = 42
    RULE_concept = 43
    RULE_predicate = 44
    RULE_key = 45
    RULE_value = 46
    RULE_qkey = 47
    RULE_qvalue = 48
    RULE_topk = 49
    RULE_start = 50
    RULE_op = 51
    RULE_symbolOP = 52
    RULE_stringOP = 53
    RULE_direction = 54
    RULE_string = 55
    RULE_date = 56
    RULE_year = 57
    RULE_number = 58

    ruleNames =  [ "root", "whatEntityQuery", "howManyEntityQuery", "whatAttributeQuery", 
                   "whatRelationQuery", "attributeSatisfyQuery", "whatAttributeQualifierQuery", 
                   "whatRelationQualifierQuery", "entitySetGroup", "entitySet", 
                   "entityFilterByRelation", "entityFilterByAttribute", 
                   "entityFilterByConcept", "queryName", "count", "findAll", 
                   "setOP", "intersect", "union", "filterAttr", "filterStr", 
                   "filterNum", "filterYear", "filterDate", "queryRelation", 
                   "select", "queryAttributeUnderCondition", "queryAttribute", 
                   "verify", "verifyStr", "verifyNum", "verifyYear", "verifyDate", 
                   "queryAttrQualifier", "queryRelationQualifier", "relate", 
                   "filterQualifier", "filterStrQualifier", "filterNumQualifier", 
                   "filterYearQualifier", "filterDateQualifier", "filterConcept", 
                   "entity", "concept", "predicate", "key", "value", "qkey", 
                   "qvalue", "topk", "start", "op", "symbolOP", "stringOP", 
                   "direction", "string", "date", "year", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    WS=38
    STRING_LITERAL=39
    INTEGER=40
    DECIMAL=41
    DOUBLE=42
    EXPONENT=43
    DIGIT=44
    FUNC_SEP=45
    IN_FUNC_SEP=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KoplParser.EOF, 0)

        def whatEntityQuery(self):
            return self.getTypedRuleContext(KoplParser.WhatEntityQueryContext,0)


        def howManyEntityQuery(self):
            return self.getTypedRuleContext(KoplParser.HowManyEntityQueryContext,0)


        def whatAttributeQuery(self):
            return self.getTypedRuleContext(KoplParser.WhatAttributeQueryContext,0)


        def whatRelationQuery(self):
            return self.getTypedRuleContext(KoplParser.WhatRelationQueryContext,0)


        def attributeSatisfyQuery(self):
            return self.getTypedRuleContext(KoplParser.AttributeSatisfyQueryContext,0)


        def whatAttributeQualifierQuery(self):
            return self.getTypedRuleContext(KoplParser.WhatAttributeQualifierQueryContext,0)


        def whatRelationQualifierQuery(self):
            return self.getTypedRuleContext(KoplParser.WhatRelationQualifierQueryContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = KoplParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 118
                self.whatEntityQuery()
                pass

            elif la_ == 2:
                self.state = 119
                self.howManyEntityQuery()
                pass

            elif la_ == 3:
                self.state = 120
                self.whatAttributeQuery()
                pass

            elif la_ == 4:
                self.state = 121
                self.whatRelationQuery()
                pass

            elif la_ == 5:
                self.state = 122
                self.attributeSatisfyQuery()
                pass

            elif la_ == 6:
                self.state = 123
                self.whatAttributeQualifierQuery()
                pass

            elif la_ == 7:
                self.state = 124
                self.whatRelationQualifierQuery()
                pass


            self.state = 127
            self.match(KoplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatEntityQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)


        def queryName(self):
            return self.getTypedRuleContext(KoplParser.QueryNameContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_whatEntityQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhatEntityQuery" ):
                listener.enterWhatEntityQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhatEntityQuery" ):
                listener.exitWhatEntityQuery(self)




    def whatEntityQuery(self):

        localctx = KoplParser.WhatEntityQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_whatEntityQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.entitySet(0)
            self.state = 130
            self.queryName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HowManyEntityQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)


        def count(self):
            return self.getTypedRuleContext(KoplParser.CountContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_howManyEntityQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHowManyEntityQuery" ):
                listener.enterHowManyEntityQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHowManyEntityQuery" ):
                listener.exitHowManyEntityQuery(self)




    def howManyEntityQuery(self):

        localctx = KoplParser.HowManyEntityQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_howManyEntityQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.entitySet(0)
            self.state = 133
            self.count()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatAttributeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)


        def queryAttribute(self):
            return self.getTypedRuleContext(KoplParser.QueryAttributeContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_whatAttributeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhatAttributeQuery" ):
                listener.enterWhatAttributeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhatAttributeQuery" ):
                listener.exitWhatAttributeQuery(self)




    def whatAttributeQuery(self):

        localctx = KoplParser.WhatAttributeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_whatAttributeQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.entitySet(0)
            self.state = 136
            self.queryAttribute()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatRelationQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySetGroup(self):
            return self.getTypedRuleContext(KoplParser.EntitySetGroupContext,0)


        def queryRelation(self):
            return self.getTypedRuleContext(KoplParser.QueryRelationContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_whatRelationQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhatRelationQuery" ):
                listener.enterWhatRelationQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhatRelationQuery" ):
                listener.exitWhatRelationQuery(self)




    def whatRelationQuery(self):

        localctx = KoplParser.WhatRelationQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whatRelationQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.entitySetGroup()
            self.state = 139
            self.queryRelation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeSatisfyQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)


        def verify(self):
            return self.getTypedRuleContext(KoplParser.VerifyContext,0)


        def queryAttributeUnderCondition(self):
            return self.getTypedRuleContext(KoplParser.QueryAttributeUnderConditionContext,0)


        def queryAttribute(self):
            return self.getTypedRuleContext(KoplParser.QueryAttributeContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_attributeSatisfyQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeSatisfyQuery" ):
                listener.enterAttributeSatisfyQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeSatisfyQuery" ):
                listener.exitAttributeSatisfyQuery(self)




    def attributeSatisfyQuery(self):

        localctx = KoplParser.AttributeSatisfyQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attributeSatisfyQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.entitySet(0)
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KoplParser.T__12]:
                self.state = 142
                self.queryAttributeUnderCondition()
                pass
            elif token in [KoplParser.T__13]:
                self.state = 143
                self.queryAttribute()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self.verify()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatAttributeQualifierQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)


        def queryAttrQualifier(self):
            return self.getTypedRuleContext(KoplParser.QueryAttrQualifierContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_whatAttributeQualifierQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhatAttributeQualifierQuery" ):
                listener.enterWhatAttributeQualifierQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhatAttributeQualifierQuery" ):
                listener.exitWhatAttributeQualifierQuery(self)




    def whatAttributeQualifierQuery(self):

        localctx = KoplParser.WhatAttributeQualifierQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whatAttributeQualifierQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.entitySet(0)
            self.state = 149
            self.queryAttrQualifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatRelationQualifierQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySetGroup(self):
            return self.getTypedRuleContext(KoplParser.EntitySetGroupContext,0)


        def queryRelationQualifier(self):
            return self.getTypedRuleContext(KoplParser.QueryRelationQualifierContext,0)


        def getRuleIndex(self):
            return KoplParser.RULE_whatRelationQualifierQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhatRelationQualifierQuery" ):
                listener.enterWhatRelationQualifierQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhatRelationQualifierQuery" ):
                listener.exitWhatRelationQualifierQuery(self)




    def whatRelationQualifierQuery(self):

        localctx = KoplParser.WhatRelationQualifierQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whatRelationQualifierQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.entitySetGroup()
            self.state = 152
            self.queryRelationQualifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySetGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KoplParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(KoplParser.EntitySetContext,i)


        def getRuleIndex(self):
            return KoplParser.RULE_entitySetGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetGroup" ):
                listener.enterEntitySetGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetGroup" ):
                listener.exitEntitySetGroup(self)




    def entitySetGroup(self):

        localctx = KoplParser.EntitySetGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_entitySetGroup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.entitySet(0)
            self.state = 155
            self.entitySet(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KoplParser.RULE_entitySet

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class EntitySetByAttributeContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)

        def entityFilterByAttribute(self):
            return self.getTypedRuleContext(KoplParser.EntityFilterByAttributeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByAttribute" ):
                listener.enterEntitySetByAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByAttribute" ):
                listener.exitEntitySetByAttribute(self)


    class EntitySetPopulationContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def findAll(self):
            return self.getTypedRuleContext(KoplParser.FindAllContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetPopulation" ):
                listener.enterEntitySetPopulation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetPopulation" ):
                listener.exitEntitySetPopulation(self)


    class EntitySetByConceptContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)

        def entityFilterByConcept(self):
            return self.getTypedRuleContext(KoplParser.EntityFilterByConceptContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByConcept" ):
                listener.enterEntitySetByConcept(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByConcept" ):
                listener.exitEntitySetByConcept(self)


    class EntitySetAtomContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entity(self):
            return self.getTypedRuleContext(KoplParser.EntityContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetAtom" ):
                listener.enterEntitySetAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetAtom" ):
                listener.exitEntitySetAtom(self)


    class EntitySetByRankContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)

        def select(self):
            return self.getTypedRuleContext(KoplParser.SelectContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByRank" ):
                listener.enterEntitySetByRank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByRank" ):
                listener.exitEntitySetByRank(self)


    class EntitySetByOPContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KoplParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(KoplParser.EntitySetContext,i)

        def setOP(self):
            return self.getTypedRuleContext(KoplParser.SetOPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByOP" ):
                listener.enterEntitySetByOP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByOP" ):
                listener.exitEntitySetByOP(self)


    class EntitySetByRelationContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KoplParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(KoplParser.EntitySetContext,0)

        def entityFilterByRelation(self):
            return self.getTypedRuleContext(KoplParser.EntityFilterByRelationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByRelation" ):
                listener.enterEntitySetByRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByRelation" ):
                listener.exitEntitySetByRelation(self)



    def entitySet(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KoplParser.EntitySetContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_entitySet, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KoplParser.T__2]:
                localctx = KoplParser.EntitySetPopulationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 158
                self.findAll()
                pass
            elif token in [KoplParser.T__26]:
                localctx = KoplParser.EntitySetAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 159
                self.entity()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 174
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = KoplParser.EntitySetByOPContext(self, KoplParser.EntitySetContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_entitySet)
                        self.state = 162
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 163
                        self.entitySet(0)
                        self.state = 164
                        self.setOP()
                        pass

                    elif la_ == 2:
                        localctx = KoplParser.EntitySetByRankContext(self, KoplParser.EntitySetContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_entitySet)
                        self.state = 166
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 167
                        self.select()
                        pass
